--- a/Mobile Development/app/src/main/res/values/strings.xml
+++ b/Mobile Development/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="gagal_load_data_buku">Gagal load data buku</string>
     <string name="web_client_id">580586420213-uq4gf1is697g65nip9t1g44i7buu2ntv.apps.googleusercontent.com</string>
     <string name="distance">10 KM</string>
+    <string name="lihat_semua">Lihat Semua</string>
 </resources>
